<resources>
    <string name="app_name">Inventory App</string>
    <string name="no_records_found_text">No Records</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="label_image">Image</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_product_phone">Phone</string>
    <string name="hint_supplier_email">Email</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="details_delete_product_successful">Product deleted</string>
    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="details_delete_product_failed">Error with deleting product</string>
    <string name="details_update_product_failed">Update Failed</string>
    <string name="details_update_product_successful">Update successful</string>
    <string name="details_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="details_insert_product_failed">Error with saving product</string>
    <string name="category_quantity">Quantity</string>
    <string name="order_more">Order More</string>
    <string name="add_product">Add a Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="invalid_quantity">Invalid Quantity</string>
    <string name="err_external_storage_permissions">Error getting permission</string>
    <string name="action_order">Order</string>
    <string name="sell_product_failed">Sell Product Failed</string>
    <string name="ok">Ok</string>
    <string name="default_product_quantity">0</string>
    <string name="file_not_found">File Not Found</string>
    <string name="image_failed">You should pick an image</string>
    <string name="enter_data">Enter all  product\'s Data</string>
    <string name="quantity_modified">Quantity Modified</string>


</resources>
